# amaceing_toolkit

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: api_reference.rst  conf.py  index.rst  requirements.txt
docs/source/api_reference/: analyzer.rst  cp2k.rst  index.rst  mace.rst  mattersim.rst  sevennet.rst  uma.rst  utils.rst
docs/source/examples/: 4KOH_92H2O.rst  analyzer_example.rst  other.rst
docs/source/modules/: analyzer.rst  cp2k.rst  grace.rst  mace.rst  mattersim.rst  orb.rst  sevennet.rst  uma.rst  utils.rst
docs/source/user_guide/: configuration.rst  getting_started.rst  installation.rst  tutorials.rst  workflow_overview.rst
examples/4KOH_92H2O_333K/: cp2k_test.sh  grace_test.sh  mace_test.sh  mattersim_test.sh  orb_test.sh  sevennet_test.sh  uma_test.sh  utils_test.sh
examples/4KOH_92H2O_333K/data/: dft_energies.xyz  dft_forces.xyz  mace_energies.txt  mace_forces.xyz  pbc  ref_trajectory.xyz  system.model  system.xyz  train_file.xyz  (+4 more)
examples/CsH2PO4/: cp2k_test.sh  grace_test.sh  mace_test.sh  mattersim_test.sh  orb_test.sh  sevennet_test.sh  umat_test.sh  utils_test.sh
examples/analyzer/: analyzer_test.sh
examples/api_examples/: analyzer_example.py  cp2k_example.py  grace_example.py  mace_example.py  mattersim_example.py  orb_example.py  sevennet_example.py  uma_example.py  utils_example.py
src/amaceing_toolkit/: __init__.py
tutorials/: atk_nbA.ipynb  atk_nbB.ipynb
tutorials/data/: dft_forces.xyz  mace_energies.txt  mace_forces.xyz  pbc_ana  system.xyz  train_7net.data  train_7net.xyz  train_mace.xyz  traj.xyz
(+42 files in other folders)
