[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amaceing_toolkit"
version = "0.5.1"
description = "A Python package for the creation of input files for CP2K, MACE-torch, MatterSim, SevenNet, ORB, and Grace as well as the post-processing and evaluation of these simulations."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Jonas Hänseroth", email = "jonas.haenseroth@tu-ilmenau.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/jhaens/amaceing_toolkit"
"Bug Tracker" = "https://github.com/jhaens/amaceing_toolkit/issues"

[project.scripts]
amaceing_cp2k = "amaceing_toolkit:amaceing_cp2k"
amaceing_mace = "amaceing_toolkit:amaceing_mace"
amaceing_mattersim = "amaceing_toolkit:amaceing_mattersim"
amaceing_sevennet = "amaceing_toolkit:amaceing_sevennet"
amaceing_orb = "amaceing_toolkit:amaceing_orb"
amaceing_grace = "amaceing_toolkit:amaceing_grace"
amaceing_utils = "amaceing_toolkit:amaceing_utils"
amaceing_ana = "amaceing_toolkit:amaceing_ana"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"amaceing_toolkit.default_configs" = ["*.txt", "*.py"]

[tool.pybind11]
include-dirs = ["src/amaceing_toolkit/trajec_ana"]
